--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sizimi連合公式サイト</title>
+    <title>sizimi連合のブログ</title>
     <link rel="stylesheet" href="https://yosio11.github.io/sizimi-Blog/style.css">
     <link rel="icon" href="https://yosio11.github.io/sizimi/favicon.ico">
     <link rel="apple-touch-icon" href="https://yosio11.github.io/sizimi/favicon.ico">
