--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="jp">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,34 +9,62 @@
     <link rel="icon" href="https://yosio11.github.io/sizimi/favicon.ico">
     <link rel="apple-touch-icon" href="https://yosio11.github.io/sizimi/favicon.ico">
 </head>
+
 <body>
     <div class="bg"></div>
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
     <div class="st">
-      <table>
-       <tr>
-       <td><img src="https://yosio11.github.io/sizimi/sizimi2.png" alt="しじみのロゴ" title="ロゴマーク"></td>
-       <td><h1>sizimi連合公式webサイト</h1></td>
-       </tr>
-      </table>
+        <table>
+            <tr>
+                <td><img src="https://yosio11.github.io/sizimi/sizimi2.png" alt="しじみのロゴ" title="ロゴマーク"></td>
+                <td>
+                    <h1>sizimi連合公式webサイト-sizimi連合のブログ</h1>
+                </td>
+            </tr>
+        </table>
     </div>
-  　<div class="button_line001">  
-      <table>
-       <tr>
-       <td><a href="https://yosio11.github.io/sizimi/">Home</a></td>
-       <td><a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">googleサイト版 sizimi連合公式webサイトはこちら</a></td>
-       <td><a href="https://yosio11.github.io/sizimi-Terms-of-use/">sizimi連合規約書</a></td>
-       <td><a href="https://meet.google.com/pxu-awjq-dew">sizimi連合のgoogle meet</a>
-           <a href="https://yosio11.github.io/sizimi-Blog/">sizimi連合のブログ</a>
-       </td>
-       <td><a href="https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA">sizimi連合のチャットルーム</a>
-       <a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">sizimi連合のgoogle Drive</a></td>
-       </tr>
-       </table>
+    　<div class="button_line001">
+        <table>
+            <tr>
+                <td><a href="https://yosio11.github.io/sizimi/">Home</a></td>
+                <td><a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">googleサイト版
+                        sizimi連合公式webサイトはこちら</a></td>
+                <td><a href="https://yosio11.github.io/sizimi-Terms-of-use/">sizimi連合規約書</a></td>
+                <td><a href="https://meet.google.com/pxu-awjq-dew">sizimi連合のgoogle meet</a>
+                    <a href="https://yosio11.github.io/sizimi-Blog/">sizimi連合のブログ</a>
+                </td>
+                <td><a href="https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA">sizimi連合のチャットルーム</a>
+                    <a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">sizimi連合のgoogle Drive</a>
+                </td>
+            </tr>
+        </table>
     </div>
     <div class="contents">
-      
+        <h1>ようこそ、sizimi連合のブログへ！</h1>
+        <img src="https://yosio11.github.io/sizimi-Blog/sizimi-pc.jpg" alt="オシャレなパソコン" title="オシャレなパソコン">
+        <p>今回は、僕、佐野舜がブログを作ってみた！　という内容です。</p>
+        <h2>自作でwebサイトを作った話と自作ブログの話。</h2>
+        <h3>第一章-自作でwebサイトを作った話。</h3>
+        <p>私は「なぜ自作でwebサイトを作ったの？」と、聞かれたらこう答えます。</p>
+        <p>「暇だったから」そうなんです。暇だからsizimi連合の公式webサイトを作ろうとしたんです。</p>
+        <p>まあ、もうちょっと詳しく書きますと、「プログラミングの勉強になるかな？」と思って初めたんです。</p>
+        <p>私はもともと、プログラミングは、興味がありましたし、実際にScratchでなんちゃってOSを作るくらい</p>
+        <p>だったら私もできました。ですが、私は、もっと高みに挑戦したいと思ったので、コード式のプログラミング</p>
+        <p>の練習も兼ねて自作webサイトを作ろうとしたんです。</p>
+        <p>一言に自作webサイト、と言っても多々あります。単純な文字だけだったり、ちょっと複雑な動作をするもの</p>
+        <p>だったり。</p>
+        <p>私はこの中でも結構簡単そうだった、単純な文字だけのものにしました。</p>
+        <p>私は、youtubeで自作のwebサイトの作り方を調べたりしてようやく完成にこじつける事ができました。</p>
+        <p>完成したときの感動は何にも代え難いものでした。何故なら、色々あって一週間位かかっているからです。</p>
+        <p>今思うと、webサイトを公開するのは難しかったな、と思います。</p>
+        <h3>第二章-この自作ブログの話。</h3>
+        <p>この自作ブログは、僕の情報を載せて行こうかなーと思います。</p>
+        <p>因みに、更新は気が向いたらします。たぶん。</p>
+        <p>なので非常に更新速度は遅いです。</p>
+        <h2>以上、ヒジョーーにのんびりしている人のブログでした！</h2>
+        <b>作　佐野 舜</b>
     </div>
-  </body>
+</body>
+
 </html>
