--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="contents">
         <h1>ようこそ、sizimi連合のブログへ！</h1>
         <img src="https://yosio11.github.io/sizimi-Blog/sizimi-pc.jpg" alt="オシャレなパソコン" title="オシャレなパソコン">
-        <p>今回は、僕、佐野舜がブログを作ってみた！　という内容です。</p>
+        <p>今回は、私、佐野舜がブログを作ってみた！　という内容です。</p>
         <h2>自作でwebサイトを作った話と自作ブログの話。</h2>
         <h3>第一章-自作でwebサイトを作った話。</h3>
         <p>私は「なぜ自作でwebサイトを作ったの？」と、聞かれたらこう答えます。</p>
