--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <p>なので非常に更新速度は遅いです。</p>
         <h2>以上、ヒジョーーにのんびりしている人のブログでした！</h2>
         <b>作　佐野 舜</b>
+        <script src="https://embed.small.chat/T03DNHN2ERZC03ECAF0D7S.js" async></script>
     </div>
 </body>
 
