--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://yosio11.github.io/sizimi-Blog/style.css">
     <link rel="icon" href="https://yosio11.github.io/sizimi/favicon.ico">
     <link rel="apple-touch-icon" href="https://yosio11.github.io/sizimi/favicon.ico">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <script src="https://yosio11.github.io/sizimi-Template/script.js" type="text/javascript"></script>
+    <script src="https://embed.small.chat/T03DNHN2ERZC03ECAF0D7S.js" async></script>
 </head>
 
 <body>
@@ -24,21 +27,9 @@
             </tr>
         </table>
     </div>
-    　<div class="button_line001">
-        <table>
-            <tr>
-                <td><a href="https://yosio11.github.io/sizimi/">Home</a></td>
-                <td><a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">googleサイト版
-                        sizimi連合公式webサイトはこちら</a></td>
-                <td><a href="https://yosio11.github.io/sizimi-Terms-of-use/">sizimi連合規約書</a></td>
-                <td><a href="https://meet.google.com/pxu-awjq-dew">sizimi連合のgoogle meet</a>
-                    <a href="https://yosio11.github.io/sizimi-Blog/">sizimi連合のブログ</a>
-                </td>
-                <td><a href="https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA">sizimi連合のチャットルーム</a>
-                    <a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">sizimi連合のgoogle Drive</a>
-                </td>
-            </tr>
-        </table>
+    <div id="cover">
+      <div id="section1"></div>
+      <div id="section2"></div>
     </div>
     <div class="contents">
         <h1>ようこそ、sizimi連合のブログへ！</h1>
