--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
             </tr>
         </table>
     </div>
-    <div id="cover">
-      <div id="section1"></div>
-      <div id="section2"></div>
-    </div>
+    <div id="cover"></div>
     <div class="contents">
         <h1>ようこそ、sizimi連合のブログへ！</h1>
         <img src="https://yosio11.github.io/sizimi-Blog/sizimi-pc.jpg" alt="オシャレなパソコン" title="オシャレなパソコン">
