--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             </tr>
         </table>
     </div>
-    <div id="cover"></div>
+    <object type="text/html" data="https://yosio11.github.io/sizimi-Template/index.html" width="1300" height="140">
+    <p>non object</p>
+  　</object>
     <div class="contents">
         <h1>ようこそ、sizimi連合のブログへ！</h1>
         <img src="https://yosio11.github.io/sizimi-Blog/sizimi-pc.jpg" alt="オシャレなパソコン" title="オシャレなパソコン">
