--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
             </tr>
         </table>
     </div>
-    <object type="text/html" data="https://yosio11.github.io/sizimi-Template/index.html" width="1300" height="140">
-    <p>non object</p>
-    </object>
+    <body>
+    <div id="cover">
+      <div id="section1"></div>
+      <div id="section2"></div>
+    </div>
+    </body>
     <div class="contents">
         <h1>ようこそ、sizimi連合のブログへ！</h1>
         <img src="https://yosio11.github.io/sizimi-Blog/sizimi-pc.jpg" alt="オシャレなパソコン" title="オシャレなパソコン">
