--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p>因みに、更新は気が向いたらします。たぶん。</p>
         <p>なので非常に更新速度は遅いです。</p>
         <h2>以上、ヒジョーーにのんびりしている人のブログでした！</h2>
-        <b>作　佐野 舜</b>
+        <b>作　yosio11</b>
         <script src="https://embed.small.chat/T03DNHN2ERZC03ECAF0D7S.js" async></script>
     </div>
 </body>
